Version 17.71 - 18 January 2017

- partitioning_wizard:
  o fix bug in detecting whether a BIOS boot partition is required (mga#19935)
- fix inserting extended partition in the middle

Version 17.69 - 12 January 2017

- bootloader:
  o disable audit logging as it floods the logs
- diskdrake:
  o fix exception when clearing all partitions on !UEFI (mga#20083)
- recognize new kernel-4.9 drivers
- rely on Gtk+ for checking if we can connect to Xserver (mga#19498)
  (meaning relying on xwayland under Wayland)

Version 17.65 - 12 December 2016

- drakboot:
  o describe what skipping os-prober does (mga#18538)
  o show generic help too when using grub2

Version 17.63 - 9 December 2016

- drakedm:
  o allow disabling autologin on LXDM (mga#17616)

Version 17.60 - 15 November 2016

- diskdrake:
  o fix being unable to format a newly part (mga#19172)
  o offer to format unmounted parts that have a defined mount point

Version 17.59 - 8 November 2016

- any.pm: Fix support of plasma under X and wayland in running_window_manager()
- mygtk3:
  o adapt to WebKit2 for disabling context menu (eg: in mcc)

Version 17.58 - 24 October 2016

- drakboot:
  o make kernel server default if installed
    (we were only checking for long dead flavors such as enterprise, ...)

Version 17.56 - 19 September 2016

- detect ovirt too (mga#19308)
- fix gtk+3.22 regression (mga#19406)
- sync nonfree firmware list with kernel-4.7

Version 17.54 - 13 August 2016

- drakautologin:
  o add support for LXDM (mga#17616)
  o add support for SDDM (mga#17913)
- drakedm:
  o translate SDDM instead of KDM
- filesharelist:
  o fix Samba package name (samba-server -> samba)
- harddrake2:
  o em28xx drives TV cards, not webcam (mga#18995)

Version 17.53 - 31 July 2016

- diskdrake:
  o first usable sector is LBA34 for GPT
  o respect used scheme when clearing a disk
    (ie do not switch from gpt to dos scheme on small disk)
- drakboot:
  o fix .old backup for grub2's grub.cfg