@@ -1,4 +1,4 @@
-# generated using kernel-desktop-4.7.2-1.mga6
+# generated using kernel-desktop-4.9.6-1.mga6
 # This list is autogenerated ; Do NOT alter manually.
 
 package list_firmwares;
@@ -12,12 +12,11 @@ our @modules_with_nonfree_firmware =
     io_ti ipw2100 ipw2200 ivtv iwl3945 iwl4965 iwlwifi kaweth keyspan lgs8gxx
     libertas_cs libertas_sdio libertas_spi mga mt7601u mwifiex_sdio mwifiex_usb
     mwl8k myri10ge netxen_nic nouveau orinoco pvrusb2 qat_dh895xcc qed qla1280
-    qla2xxx qlcnic r8169 r8192e_pci r8712u r8723au radeon rp2 rsi_sdio rsi_usb
-    rt2800pci rt2800usb rt61pci rt73usb rtl8188ee rtl8192ce rtl8192cu rtl8192de
-    rtl8192ee rtl8192se rtl8723be rtl8821ae rtl8xxxu s2255drv saa7134-go7007
-    slicoss smc91c92_cs smsmdtv snd-hda-codec-ca0132 snd-korg1212 snd-maestro3
-    snd-ymfpci starfire tehuti tg3 ti_usb_3410_5052 typhoon ueagle-atm ums-eneub6250
-    usb8xxx vt6656_stage whiteheat wl1251 wl12xx wl18xx wlcore xc4000 xc5000
-    yam);
+    qla2xxx qlcnic r8169 r8192e_pci r8712u radeon rp2 rsi_sdio rsi_usb rt2800pci
+    rt2800usb rt61pci rt73usb rtl8188ee rtl8192ce rtl8192cu rtl8192de rtl8192ee
+    rtl8192se rtl8723be rtl8821ae rtl8xxxu s2255drv saa7134-go7007 slicoss
+    smc91c92_cs smsmdtv snd-hda-codec-ca0132 snd-korg1212 snd-maestro3 snd-ymfpci
+    starfire tehuti tg3 ti_usb_3410_5052 typhoon ueagle-atm ums-eneub6250 usb8xxx
+    vt6656_stage whiteheat wl1251 wl12xx wl18xx xc4000 xc5000 yam);
 
 1;
