@@ -1,3 +1,5 @@
+- sync nonfree firmware list with kernel-4.9
+
 Version 17.71 - 18 January 2017
 
 - partitioning_wizard:
